# elementium

./: .gitignore  Cargo.toml  elementium.config.sh  flake.nix  justfile
crates/elementium-codec/: Cargo.toml
crates/elementium-codec/src/: lib.rs  opus_codec.rs  pixel_convert.rs  vpx_codec.rs
crates/elementium-e2ee/: Cargo.toml
crates/elementium-e2ee/src/: lib.rs
crates/elementium-keyring/: Cargo.toml
crates/elementium-keyring/src/: error.rs  file_backend.rs  keyring_backend.rs  lib.rs
crates/elementium-media/: Cargo.toml
crates/elementium-media/src/: audio_capture.rs  audio_playback.rs  camera.rs  device_enumeration.rs  lib.rs
crates/elementium-screen/: Cargo.toml
crates/elementium-screen/src/: lib.rs  traits.rs  wayland.rs  x11.rs
crates/elementium-types/: Cargo.toml
crates/elementium-types/src/: error.rs  lib.rs  media.rs
crates/elementium-webrtc/: Cargo.toml
crates/elementium-webrtc/src/: audio_pipeline.rs  engine.rs  lib.rs  peer_connection.rs  stun.rs  video_pipeline.rs
crates/elementium-webrtc/src/livekit/: mod.rs  room.rs  signaling.rs  transport.rs
element-web-config/: config.json
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.shims.config.ts
frontend/src/: main.ts
frontend/src/renderer/: frame-fetcher.ts  video-renderer.ts
frontend/src/shim/: console-bridge.ts  index.ts  livekit-bridge.ts  media-devices.ts  secret-storage.ts  webrtc-shim.ts
scripts/: fetch-element-web.sh  patch-element-web.sh  prepare-build.sh  prepare-dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  protocols.rs  tray.rs
src-tauri/src/commands/: console.rs  e2ee.rs  livekit.rs  media_devices.rs  mod.rs  screen_capture.rs  secrets.rs  webrtc.rs
