[package]
name = "elementium-keyring"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secure secret storage via OS keyring with encrypted file fallback"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Crypto for file backend
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Atomic file writes
tempfile = "3"

# App data directory
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
