[package]
name = "elementium-media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audio/video capture and playback (cpal, nokhwa)"

[dependencies]
elementium-types = { workspace = true }
cpal = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
