[package]
name = "elementium-screen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Screen capture (Wayland via ashpd+pipewire, X11/macOS/Windows via xcap)"

[dependencies]
elementium-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.11", features = ["tokio"] }
xcap = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
xcap = { workspace = true }
