[package]
name = "elementium-webrtc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebRTC engine (str0m sans-I/O) and LiveKit SFU client"

[dependencies]
elementium-types = { workspace = true }
elementium-codec = { workspace = true }
elementium-media = { workspace = true }
str0m = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
